fixing banner high contrast (#2878)

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -14,9 +14,7 @@ $secondary-action-horizontal-padding: 1.5 * spacing(tight);
   box-shadow: var(--p-banner-border, none);
 
   @media (-ms-high-contrast: active) {
-    box-shadow: inset 0 $accent-height 0 0 ms-high-contrast-color('text'),
-      inset 0 0 border-width(base) border-width(base)
-        ms-high-contrast-color('text');
+    outline: 1px solid;
   }
 
   @if $in-page {
